# schach9x9

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .tsbuildinfo  CHANGELOG.md  README.md  ai-worker.js  aiController.js  aiEngine.js  aiEngine.test.js  arrows.test.js  chess-pieces.js  commitlint.config.cjs  commitlint.config.js  config.js  coordinates.css  current_test_run.txt  debug_hash.mjs  eslint.config.mjs  fix_search.py  fix_search_v2.py  full_coverage_raw.txt  gameController.js  gameEngine.additional.test.js  gameEngine.js  gameEngine.pieces.test.js  gameEngine.rules.test.js  gameEngine.test.js  index.html  jest.config.js  jsdoc.json  lint-results.json  logger.js  main.js  moveController.js  opening-book-8x8.json  opening-book-trainer-real.cjs  opening-book-trainer.cjs  (+23 more)
.github/: dependabot.yml  lighthouse-ci.json
bench/: NEGATIVE_RESULTS.md  match_bal_vs_agg_d8.txt  match_d8_vs_d4.txt  match_e1200_vs_e2500.txt  match_fix_d3_vs_d7.txt  mobility_hyp_agg_vs_solid.txt  post_h3_remis_study.txt  remis_study_nobook.txt  scale_d7_5s_vs_d9_10s.txt  scale_h3_d7_5s_vs_d8_8s.txt
css/: analysis.css  animations.css  base.css  board.css  components.css  debug.css  layout.css  menu.css  notifications.css  premium.css  shop.css  skins.css  themes.css  (+1 more)
engine-wasm/: Cargo.toml
engine-wasm/.cargo/: config.toml
engine-wasm/pkg/: .gitignore  engine_wasm.d.ts  engine_wasm.js  engine_wasm_bg.wasm  engine_wasm_bg.wasm.d.ts  package.json  schach9x9.d.ts
engine-wasm/src/: definitions.rs  eval.rs  lib.rs  move_gen.rs  ordering.rs  search.rs  zobrist.rs
(+680 files in other folders)
