[package]
name = "schach9x9"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# SIMD feature flag
[features]
default = []
simd = []
